# HSE-FASM

Assembly/Introduction-to-Flat-Assembler/code/DIALOG/: DIALOG.ASM
Assembly/Introduction-to-Flat-Assembler/code/OPENGL/: OPENGL.ASM
Assembly/MicroProject/: readme.md
Assembly/MicroProject/code/: 2.ASM
CPPThreads/Introduction-to-OpenMP/: readme.md
CPPThreads/MicroProject_2/: readme.md
CPPThreads/MicroProject_2/code/: CMakeLists.txt  main  main.cpp
CPPThreads/MultithreadedApplication/: readme.md
CPPThreads/MultithreadedApplication/code/: CMakeLists.txt
HomeWork_1/: readme.md
HomeWork_1/code/: 1.ASM
Introduction-to-Flat-Assembler/: readme.md
Introduction-to-Flat-Assembler/code/DDRAW/: DDRAW.ASM
Introduction-to-Flat-Assembler/code/HELLO/: HELLO.ASM
Introduction-to-Flat-Assembler/code/USECOM/: USECOM.ASM
Introduction-to-OpenMP/code/test_openmp/: CMakeLists.txt  main  main.cpp
MicroProject/: 1.ASM  2.ASM  PZ_Samarenko-Andrew-191.docx  readme.md  ~$_Samarenko-Andrew-191.docx
MicroProject/code/: 2.ASM
MicroProject/docs/: PZ_Samarenko-Andrew-191.docx
MicroProject_2/: readme.md
MicroProject_2/code/: main
MicroProject_2/docs/: PZ_Samarenko-Andrew-191.docx
MultithreadedApplication/: readme.md
MultithreadedApplication/code/: main  main.cpp
